@@ -1,10 +1,12 @@
 /*
- * Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.
+ * published by the Free Software Foundation.  Oracle designates this
+ * particular file as subject to the "Classpath" exception as provided
+ * by Oracle in the LICENSE file that accompanied this code.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -20,14 +22,24 @@
  * or visit www.oracle.com if you need additional information or have any
  * questions.
  */
+package sun.security.provider;
 
-// key: compiler.err.invalid.canonical.constructor.in.record
-// key: compiler.misc.canonical.constructor.must.be.public
-// key: compiler.note.preview.filename
-// key: compiler.note.preview.recompile
-// key: compiler.misc.canonical
-// options: --enable-preview -source ${jdk.version}
+/*
+ * The SHAKE256 extendable output function.
+ */
+public final class SHAKE256 extends SHA3 {
+    public SHAKE256(int d) {
+        super("SHAKE256", d, (byte) 0x1F, 64);
+    }
 
-record R(int i) {
-    R(int i) { this.i = i; }
+    public void update(byte in) {
+        engineUpdate(in);
+    }
+    public void update(byte[] in, int off, int len) {
+        engineUpdate(in, off, len);
+    }
+
+    public byte[] digest() {
+        return engineDigest();
+    }
 }
